@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Throw an error during registration for fonts which Freetype2 does not report a family or style name (r2985).
+
 - Fixed quoting syntax for "table"."attribute" in PostGIS plugin (previously if table aliases were used quoting like "table.attribute" would cause query failure) (r2979).
 
 - Added the ability to control the PostGIS feature id by suppling a key_field to reference and integer attribute name (r2979).
